--- a/index.html
+++ b/index.html
@@ -21,13 +21,26 @@
       <h2>About This Site</h2>
       <p>This is a sample website created for Assessment 4. It demonstrates HTML5 and CSS3 usage, including media elements.</p>
     </section>
+
     <section>
       <h2>Listen to This Audio</h2>
-      <!-- Added audio with controls -->
       <audio controls>
         <source src="media/sample.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
+    </section>
+
+    <section>
+  <h2>Watch This Video</h2>
+  <iframe width="640" height="360"
+          src="<iframe width="560" height="315" src="https://www.youtube.com/embed/DTKb1uH5W18?si=fpzcoLs2tZuE5RRt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+  </iframe>
+</section>
+      </video>
     </section>
   </main>
   <footer>
