--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
       </audio>
     </section>
 
-    <section>
+  <section>
   <h2>Watch This Video</h2>
-  <iframe width="640" height="360"
-          src="<iframe width="560" height="315" src="https://www.youtube.com/embed/DTKb1uH5W18?si=fpzcoLs2tZuE5RRt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  <iframe width="640" height="360" 
+          src="https://www.youtube.com/embed/DTKb1uH5W18?si=fpzcoLs2tZuE5RRt" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen>
   </iframe>
+</section>
 </section>
       </video>
     </section>
