--- a/gallery.html
+++ b/gallery.html
@@ -26,13 +26,16 @@
         <a href="images/img3_large.jpg" target="_blank"><img src="images/img3_thumb.jpg" alt="Image 3"></a>
       </div>
     </section>
-    <section>
-      <h2>Featured Video</h2>
-      <!-- Embedded video with controls -->
-      <video controls width="600">
-        <source src="media/sample.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+   <section>
+  <h2>Watch This Video</h2>
+  <iframe width="640" height="360" 
+          src="https://www.youtube.com/embed/DTKb1uH5W18?si=fpzcoLs2tZuE5RRt" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen>
+  </iframe>
+</section>
     </section>
   </main>
   <footer>
