--- a/index.html
+++ b/index.html
@@ -16,20 +16,23 @@
       </ul>
     </nav>
   </header>
+
   <main>
     <section>
       <h2>About This Site</h2>
       <p>This is a sample website created for Assessment 4. It demonstrates HTML5 and CSS3 usage, including media elements.</p>
     </section>
+
     <section>
       <h2>Listen to This Audio</h2>
       <!-- Added audio with controls -->
       <audio controls>
-        <source src="media/sample.mp3" type="audio/mpeg">
+        <source src="media/media.wav" type="audio/wav">
         Your browser does not support the audio element.
       </audio>
     </section>
   </main>
+
   <footer>
     <p>&copy; 2025 My Website</p>
   </footer>
