--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h2>Listen to This Audio</h2>
       <!-- Added audio with controls -->
       <audio controls>
-        <source src="media/media.wav" type="audio/wav">
+        <source src="media/sample-audio.wav" type="audio/wav">
         Your browser does not support the audio element.
       </audio>
     </section>
