--- a/gallery.html
+++ b/gallery.html
@@ -80,7 +80,7 @@
     <h2>Listen to This Audio</h2>
     <!-- Added audio with controls -->
     <audio controls>
-      <source src="media/sample-audio.wav" type="audio/wav">
+      <source src="sample-audio.wav" type="audio/wav">
       Your browser does not support the audio element.
     </audio>
   </section>
